Fix merge conflict (still errors)

--- a/Kroy/build.gradle
+++ b/Kroy/build.gradle
@@ -63,6 +63,7 @@ project(":core") {
         testCompile "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
         testCompile "com.badlogicgames.gdx:gdx:$gdxVersion"
         testCompile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
+        compile group: 'com.google.code.gson', name: 'gson', version: '2.2.2'
     }
 
 
